{
    "name": "ActionControl",
    "maps": [
        {
            "name": "ClickAction",
            "id": "da6c30d1-972d-4ba2-9871-23c675552815",
            "actions": [
                {
                    "name": "Mouse_Left",
                    "type": "Button",
                    "id": "aab923d3-f35f-47a6-a0ce-a69259214274",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse_Position",
                    "type": "PassThrough",
                    "id": "8f853f65-1b29-41f9-9907-7259192f105b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "739b21b2-8c5c-4d07-8bb5-5b32b9793a88",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Click",
                    "action": "Mouse_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3df90d83-4167-4a4e-a4df-791aacf587d7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Click",
            "bindingGroup": "Click",
            "devices": []
        }
    ]
}